<resources>
    <string name="app_name">Food Ordering App</string>
    <string name="name">Name</string>
    <string name="continue_with">Continue with</string>
    <string name="or">or</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="mobile_no">Mobile No</string>
    <string name="cheeseburger_wenndy_s_burger">Cheeseburger Wenndy’s Burger</string>
    <string name="humberger_chicken_burger">Humberger chicken Burger</string>
    <string name="hamburger_fried_chicken_burger">Hamburger Fried chicken Burger</string>
    <string name="hamburger_veggle_burger">Hamburger veggle Burger</string>
    <string name="pay_now">Pay Now</string>
    <string name="order">order</string>
    <string name="taxtes">taxtes</string>
    <string name="delivery_fees">Delivery fees</string>
    <string name="estimated_delivery_time">Estimated delivery time:</string>
    <string name="total">Total:</string>
    <string name="total_price">Total Price</string>
    <string name="_0_00">0.00 $</string>
    <string name="order_summary">Order summary</string>
    <string name="view_menu">View Menu</string>
    <string name="_4_3">4.3</string>
    <string name="popular">Popular</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="google">Google</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="login_to_your_account">Login To your Account</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
</resources>