<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="412dp"
        android:layout_height="200dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="450dp"
        android:src="@drawable/banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/popular"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="53dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textviewshape"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/view_menu"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="293dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="159dp"
        android:layout_height="153dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/pngwing1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="157dp"
        android:layout_height="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:drawableRight="@drawable/heart"
        android:text="  4.3 "
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="157dp"
        android:layout_height="22dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:drawableRight="@drawable/heart"
        android:text="@string/_4_3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="163dp"
        android:layout_height="157dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/pngwing3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="140dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:text="Humberger  chicken Burger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="152dp"
        android:layout_height="19dp"
        android:layout_marginEnd="32dp"
        android:text="Cheeseburger Wenndy’s Burger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.339" />


</androidx.constraintlayout.widget.ConstraintLayout>