<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView7"
        android:layout_width="410dp"
        android:layout_height="102dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView8">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="124dp"
            android:layout_height="97dp"
            android:src="@drawable/pngwing7"
            app:layout_constraintEnd_toStartOf="@+id/textView21"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="3dp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="59dp"
            android:text="@string/hamburger_veggle_burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.155" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="81dp"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView26"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.691"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="76dp"
            android:src="@drawable/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.691"
            android:contentDescription="TODO" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView8"
        android:layout_width="412dp"
        android:layout_height="108dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="120dp"
            android:layout_height="104dp"
            android:src="@drawable/pngwing5"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="2dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="72dp"
            android:text="@string/hamburger_fried_chicken_burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView24"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.662"
            tools:ignore="ImageContrastCheck"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="64dp"
            android:src="@drawable/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView23"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.661"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView6"
        android:layout_width="406dp"
        android:layout_height="122dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView8"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/pngwing3"
            app:layout_constraintEnd_toStartOf="@+id/imageView21"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="57dp"
            android:text="@string/humberger_chicken_burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.262" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.681" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="92dp"
            android:layout_marginEnd="68dp"
            android:src="@drawable/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView21"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.67"
            tools:ignore="DuplicateIds"
            android:contentDescription="TODO" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView5"
        android:layout_width="404dp"
        android:layout_height="127dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="117dp"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            android:contentDescription="TODO"
            android:src="@drawable/pngwing1"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription,HardcodedText,MissingConstraints"
            tools:layout_editor_absoluteY="-1dp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cheeseburger_wenndy_s_burger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="69dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView20"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.827"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="92dp"
            android:src="@drawable/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.827"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

